feat(kobo): enhance sync stability with new settings and proxy features